# lyricer

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
src/: error.rs  lyric.rs  main.rs
