[package]
name = "lyricer"
version = "1.0.3"
authors = ["tony<61054382+moelife-coder@users.noreply.github.com>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0-only"
description = "An addon for waybar to display lyrics"
homepage = "https://github.com/moelife-coder/lyricer"
repository = "https://github.com/moelife-coder/lyricer"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpris = "2.0"
urlencoding = "2.1"
log = { version = "0.4", features = ["release_max_level_error"] }
pretty_env_logger = "0.5"
anyhow = "1.0"
thiserror = "2.0"
signal-hook = "0.3"

[features]
default = ["multiline-lrc"]
multiline-lrc = []
